# Curve

./:  README.md  .clang-format  .gitignore  CMakeLists.txt  README.md  main  main.cpp
curve/: CMakeLists.txt  curve_lib.cpp  curve_lib.h
main/: main.cpp
